tests/ui/const-generics/generic_const_exprs/adt_wf_hang.stderr
error[E0275]: overflow evaluating the requirement `S<{ U }> well-formed`
  --> $DIR/adt_wf_hang.rs:11:5
   |
LL |     S<{ U }>:;
   |     ^^^^^^^^
   |
note: required by a bound in `S`
  --> $DIR/adt_wf_hang.rs:11:5
   |
LL | struct S<const N: U>()
   |        - required by a bound in this struct
LL | where
LL |     S<{ U }>:;
   |     ^^^^^^^^ required by this bound in `S`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
